--- a/Codes/IF231/Week-02/kontak.html
+++ b/Codes/IF231/Week-02/kontak.html
@@ -16,26 +16,29 @@
 
     <p>Yang ingin jadi teman saya, bisa mengisi form dibawah ini ya ;)</p>
 
-    <form action="proses.html" method="get">
+    <form action="proses.html" method="get" id="kontak-form">
       <table>
         <tr>
-          <td><label for="">Nama:</label></td>
-          <td><input type="text" name="nama"></td>
+          <td><label for="">Nama</label></td>
+          <td>:</td>
+          <td><input type="text" name="nama" id="kontak-nama"></td>
         </tr>
         <tr>
           <td><label for="">Hobi</label></td>
+          <td>:</td>
           <td><input type="checkbox" name="hobi" value="makan" /> Makan </td>
           <td><input type="checkbox" name="hobi" value="minum" /> Minum </td>
           <td><input type="checkbox" name="hobi" value="tidur" /> Tidur </td>
         </tr>
         <tr>
           <td><label for="">Jenis Kelamin</label></td>
+          <td>:</td>
           <td><input type="radio" name="kelamin" value="na"/> Tidak Punya</td>
           <td><input type="radio" name="kelamin" value="laki"/> Laki-laki</td>
           <td><input type="radio" name="kelamin" value="perempuan"/> Perempuan</td>
         </tr>
         <tr>
-          <td><button type="submit">Daftar Jadi Teman</button></td>
+          <td><button type="submit" id="btn-daftar">Daftar Jadi Teman</button></td>
         </tr>
       </table>
     </form>
