--- a/Codes/IF231/Week-02/servis.html
+++ b/Codes/IF231/Week-02/servis.html
@@ -16,13 +16,28 @@
 
 
     <p>Karena saya merupakan pelopor dari UAI NFT Club. Jika kalian ingin menggunakan jasa saya, berikut adalah daftar harganya.</p>
-    <h3>Web Development</h3>
-    <ul>
-      <li>Simple Landing Page: Rp. 10.000.000</li>
-      <li>Multi-Page Website: Rp. 25.000.000</li>
-      <li>Dynamic Website with CMS: Rp. 100.000.000</li>
-    </ul>
-
+    <table class="servis-tabel">
+      <tr>
+        <th class="servis-th1"colspan="2">Web Development</th>
+      </tr>
+      <tr class="servis-th2">
+        <th>Description</th>
+        <th>Price</th>
+      </tr>
+      <tr>
+        <td>Simple Landing Page</td>
+        <td>Rp. 10.000.000</td>
+      </tr>
+      <tr>
+        <td>Multi-Page Website</td>
+        <td>Rp. 25.000.000</td>
+      </tr>
+      <tr>
+        <td>Dynamic Website with CMS</td>
+        <td>Rp. 100.000.000</td>
+      </tr>
+    </table>
+    <table>
     <h3>Create NFT</h3>
     <ol>
       <li>Level 1 - NFT Biasa Saja: Rp. 50.000.000</li>
@@ -30,6 +45,7 @@
       <li>Level 3 - NFT Pasti Laku: Rp. 250.000.000</li>
       <li>Level 4 - NFT Bikin Tajir: Rp. 500.000.000</li>
     </ol>
+    </table>
 
     <hr />
     <p>Copyright 2022. Dilarang Copas, kalau copas bayar 5 rebu.</p>
